fix for [#3224] ScreenPrivacyExpirationUpdater does not set the DPED notification date on the screen entity
git-svn-id: https://forge.abcd.harvard.edu/svn/screensaver/trunk@6355 80c535d0-b110-0410-b4de-9279f94142c3